AppUser/mynapp-pod-cm-compress.yml
apiVersion: v1
kind: Pod
metadata:
  name: mynapp-pod-cm-compress
spec:
  containers:
  - image: nginx
    name: mynapp-compress
    volumeMounts:
    - name: nginx-compress-config
      mountPath: /etc/nginx/conf.d
    ports:
    - containerPort: 80
      portocol: TCP
  volumes:
  - name: nginx-comporess-config
    configMap:
      name: nginx-gzip-config
