AppUser/mynapp-pod-cm.yml
apiVersion: v1
kind: Pod
metadata:
  name: mynapp-pod-cm
spec:
  containers:
    - image: c1t1d0s7/myweb:customport
      name: mynapp
      args:
      - $(MESSAGE)
      ports:
      - containerPort: 8080
        protocol: TCP
