AppUser/mynapp-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mynapp-pod-arg
spec:
  containers:
  - name: mynapp
    image: c1t1d0s7/myweb
    ports:
    - containerPort: 8080
      protocol: TCP
